--- a/lpeng.css
+++ b/lpeng.css
@@ -36,7 +36,7 @@ ul li{
 a:link,a:visited,a:active {
   text-decoration: none;
   border-bottom: 1px dotted;
-  color: #3462DB;
+  color: #5B2C6F;
 }
 
 div#info {
